# caep-recuperacion-hibrida-textiles-andinos

./: .gitattributes  .gitignore  README.md  pyproject.toml
config/: controlled_vocabularies.yaml  culture_taxonomy_v1.yaml  final_source_manifest.yaml  ground_truth_audit_v1.yaml  paper_corpus_build_v1.yaml  source_registry.yaml
scripts/: audit_field_semantics.py  audit_ground_truth_categories.py  audit_metadata_joins.py  build_paper_experiment_snapshot_v1.py  check_source_url_coverage.py  extract_final_sources.py  inspect_enrichment_sources.py  inspect_final_sources.py  inspect_upstream_sources.py  prepare_culture_mapping_proposals.py  prepare_culture_period_mapping.py  prepare_ground_truth_harmonization.py  profile_source_metadata.py  report_corpus_coverage.py  report_enriched_corpus_coverage.py  report_recovered_metadata.py
tests/: test_build_multimodal_corpus.py  test_category_audit.py  test_cli_materialize_embeddings.py  test_corpus_image_downloader.py  test_culture_enriched_corpus.py  test_culture_ground_truth.py  test_culture_mapping.py  test_culture_mapping_curated.py  test_culture_mapping_review.py  test_dataset_schema.py  test_enriched_corpus.py  test_field_semantics.py  test_label_inventory.py  test_local_image_inventory.py  test_materialize_multimodal_corpus.py  test_materialize_openclip_bootstrap.py  test_materialize_openclip_embeddings.py  test_materialize_openclip_evaluation.py  test_materialize_openclip_hub_audit.py  test_materialize_openclip_hub_gallery.py  test_materialize_openclip_hubness.py  test_materialize_openclip_text_inputs.py  (+14 more)
(+155 files in other folders)
